--- a/index.html
+++ b/index.html
@@ -113,7 +113,38 @@
     </div>
 
     <div id="main" class="main-container" onclick="closeNav()">
-
+<h2 class="topic-name">History of C</h2>
+      <h3 class="sub-topic-name">What is C</h3>
+      <div class="info">
+      <p class="sub-info">C is a general-purpose programming language created by Dennis Ritchie at the Bell Laboratories in 1972.</p>
+      <p class="sub-info">It is a very popular language, despite being old. The main reason for its popularity is because it is a fundamental language in the field of computer science.</p>
+      <p class="sub-info">C is strongly associated with UNIX, as it was developed to write the UNIX operating system.</p>
+      </div>
+      <h3 class="sub-topic-name">Why Learn C</h3>
+      <div class="info">
+      <ul class="points">
+        <li>It is one of the most popular programming languages in the world</li>
+        <li>If you know C, you will have no problem learning other popular programming languages such as Java, Python, C++, C#, etc, as the syntax is similar</li>
+        <li>C is very fast, compared to other programming languages, like Java and Python</li>
+        <li>C is very versatile; it can be used in both applications and technologies</li>
+      </ul>
+      </div>
+    `,
+  application_areas: `
+    <h2 class="topic-name">Application Areas of C</h2>
+      <div class="info">
+      <ul class="points">
+        <li><b class="thick-list">Operating systems : </b> C is widely used for developing operating systems such as Unix, Linux, and Windows.</li>
+        <li><b class="thick-list">Embedded systems : </b> C is a popular language for developing embedded systems such as microcontrollers, microprocessors, and other electronic devices.</li>
+        <li><b class="thick-list">System software : </b>C is used for developing system software such as device drivers, compilers, and assemblers.</li>
+        <li><b class="thick-list">Networking : </b> C is widely used for developing networking applications such as web servers, network protocols, and network drivers.</li>
+        <li><b class="thick-list">Database systems : </b> C is used for developing database systems such as Oracle, MySQL, and PostgreSQL.</li>
+        <li><b class="thick-list">Gaming :</b> C is often used for developing computer games due to its ability to handle low-level hardware interactions.</li>
+        <li><b class="thick-list">Artificial Intelligence : </b> C is used for developing artificial intelligence and machine learning applications such as neural networks and deep learning algorithms.</li>
+        <li><b class="thick-list">Scientific applications : </b> C is used for developing scientific applications such as simulation software and numerical analysis tools.</li>
+        <li><b class="thick-list">Financial applications : </b>C is used for developing financial applications such as stock market analysis and trading systems.</li>
+      </ul>      
+      </div>
       
     </div>
 
